--- a/lesson_30.01/style.css
+++ b/lesson_30.01/style.css
@@ -1,3 +1,20 @@
 li{
     list-style-type: none;
 }
+
+h1{
+    text-align: center;
+    color: rgb(18, 78, 78);
+}
+
+
+
+
+li{
+    font-weight: bold;
+    color: rgb(22, 31, 28);
+    box-shadow: -30px 3px 10px cadetblue;
+    background-color: rgb(204, 230, 221);
+    border-radius: 10px;
+    padding: 10px;
+}
