--- a/lesson_30.01/style.css
+++ b/lesson_30.01/style.css
@@ -17,4 +17,13 @@ li{
     background-color: rgb(204, 230, 221);
     border-radius: 10px;
     padding: 10px;
+    transition: 0.5s;
+}
+
+li:hover{
+    background-color: rgb(255, 255, 255);
+    scale: 1.1;
+    cursor: pointer;
+    
+
 }
